@@ -222,9 +222,10 @@ class App():
             # Let's automatically start a `bst init` session in this case
             if e.reason == LoadErrorReason.MISSING_PROJECT_CONF and self.interactive:
                 click.echo("A project was not detected in the directory: {}".format(directory), err=True)
-                click.echo("", err=True)
-                if click.confirm("Would you like to create a new project here ?"):
-                    self.init_project(None)
+                if self.context.prompt_auto_init:
+                    click.echo("", err=True)
+                    if click.confirm("Would you like to create a new project here?"):
+                        self.init_project(None)
 
             self._error_exit(e, "Error loading project")
 
